2006-9-15   fabian

    * Fixed the close button not working bug.
    * Fixed the wrong tab location after resizing bug.
    * Added support for dragging a tab outside of a window to create a new window.
    * Now allows tab size to be changed dynamically.
    
2006-9-14   fabian

    * Partly fixed the window resize bug. Now the cursor will be at the location. But the frame size
      isn't entirely correct under all conditions yet.
      
2006-9-13   fabian

    * Incorporated Growl branch into the main branch
    * Added support for a new iTerm-specific escape sequence:
        ESC ]9;string^G
      This sends an alert with specified string via Growl.
    * Added growl related strings into iTerm.string for future translations.
    * A temporary fix to the window resize bug.

2006-09-11  fabian

    * Fixed a bug that fails to refresh background windows when TAB settings are changed.
    
2006-09-07  fabian

    * removed controller in PTYSession. Now a PTYSession is directly binded to NSTabViewItem objects.
      This is because PSMTabBarControl works this way.
    * Fixed tab images when dragging.
    * Re-implemented contentual menu for the tab.
    * Fixed a memory leak.
    
2006-09-06  fabian

    * Added a lock to PSMTabBarControl to avoid crashes.
    * Fixed a blinking timing bug found by Roine Gusatfsson.
    
2006-09-01  fabian

    * Fixed a memory leak.
    * Fixed a bug that ignores tab style setting.
    
2006-08-30  fabian

    * Updated PSMTabBarControl to the latest CVS version. That fixed a frequent crash.
    
2006-08-29  fabian

    * Fixed a bug related to close-tab button.
    * Added tabLocation property to PSMTabBarControl so that Unified looks correct both
      when the tab is at the top and the tab is at the bottom.
    * Fixed a display bug so that new settings of tab location will be shown in opened windows.
    
2006-08-25  fabian

    * Fixed the overflow menu bug where the 1st item isn't updated correctly.