@@ -1,3 +1,8 @@
+2006-9-16   fabian
+
+    * Fixed another resize bug
+    * Fixed a scrolling bug
+    
 2006-9-15   fabian
 
     * Fixed the close button not working bug.
